# projet_S3

./: .gitignore  Doxyfile  Makefile  README.md
data/: att20_res.csv  ga.csv  results.csv  results_att10.csv  results_att20.csv  results_att48.csv  trash.csv  trash.tsp
docs/: all__test_8h_source.html  annotated.html  classes.html  cli_8h.html  cli_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_0525f968218f30056a0344f59b10bbbb.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2fda0b9fa6ce424d0c23dec804f65244.html  dir_3dd852c49b84c4ab561946e72c416142.html  dir_42789a1db0069d592656e7fa63f3c39c.html  dir_4a8b7a750d2ff6c3a99c71777be89ae7.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_5e6f840fa3c5adb7a798bdc9d5bf7f84.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c2fb96582c7b37b67731b20183b644b3.html  dir_ca001b8e6f16c8a14e65f9e16387c02c.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d4e142aef2342bb7c2fde416d4d6905a.html  dir_e54e9b785aaa558a38a5c33d87a83b13.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  md_papers__o_u_t_i_l_s.html  menudata.js  method__2opt__optimisation_8h.html  method__2opt__optimisation_8h_source.html  method__bruteforce_8h.html  method__bruteforce_8h_source.html  method__genetic_8h.html  method__genetic_8h_source.html  method__nearest__neighbour_8h.html  (+23 more)
html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  pretty_8h.html  pretty_8h_source.html  structinstance__s-members.html  structinstance__s.html  (+3 more)
src/: CMakeLists.txt  a.out  att10_py.tsp  cli.c  graph.py  lecture_fichier_tsplib.c  lexico.py  out1.csv  out2.csv  pretty.h  test.txt  tools.c  tools.py  tsp.c  tsp_tools.c  tspstat.h  utils.c
src/methods/: a.out  inversion_mod.py  method_2opt_optimisation.c  method_bruteforce.c  method_genetic.c  method_nearest_neighbour.c  method_random_walk.c
src/tsplib/: tsplib_io.c  tsplib_tools.c
(+89 files in other folders)
